src/test/ui/inference/cannot-infer-closure-circular.stderr
error[E0282]: type annotations needed for `std::result::Result<(), E>`
  --> $DIR/cannot-infer-closure-circular.rs:7:14
   |
LL |     let x = |r| {
   |              ^ consider giving this closure parameter the explicit type `std::result::Result<(), E>`, with the type parameters specified

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
